order-sticky z-index fix

--- a/src/scss/order/_order-sticky.scss
+++ b/src/scss/order/_order-sticky.scss
@@ -5,7 +5,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 200;
+	z-index: 90;
 	height: var(--height);
 	background-color: $color-steel-dull-95;
 
